# Kryptographie

./: .gitignore  Cargo.toml  README.md
.github/workflows/: angular-ci.yml  build.yml  ci.yml  coverage.yml  format.yml  rust-ci.yml  test.yml
GUI/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
GUI/src/: index.html  styles.css  styles.scss
GUI/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts
GUI/src/environments/: environment.development.ts  environment.ts
src/: lib.rs  main.rs
src/api/: basic.rs  create_key_pair.rs  decrypt.rs  encrypt.rs  exponentiation.rs  extended_euclid.rs  mod.rs  modular_inverse.rs  serializable_models.rs  shanks.rs  sign.rs  verify.rs
src/encryption/: asymmetric_encryption_types.rs  asymmetric_key_type.rs  encryption_service.rs  encryption_services.rs  encryption_types.rs  keygen_service.rs  mod.rs  symmetric_encryption_types.rs
src/gui/: gui.rs  gui_math.rs  mod.rs
src/math/: expanded_euclidean_algorithm.rs  fast_exponentiation.rs  mod.rs
src/math_core/: babystep_giantstep.rs  block_chiffre.rs  complex_number.rs  mod.rs  number_theory_with_prng_service.rs  pseudo_random_number_generator.rs
src/rest/: basic.rs  create_key_pair.rs  decrypt.rs  encrypt.rs  key_pair.rs  mod.rs  serializable_models.rs  sign.rs  verify.rs
src/rsa/: mod.rs  number_theory_functions.rs
src/shared/: errors.rs  hashing.rs  mod.rs  statistics_logger.rs
src/tests/: mod.rs  test_number_theory_functions.rs
(+359 files in other folders)
