[package]
name = "RSA-Implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.2"
rand = "0.8"

iced = { version = "0.10.0" , features = ["canvas", "advanced", "debug", "lazy"]}


log = "0.4.20"
simple_logger = "4.2.0"
rayon = "1.8.0"
sha2 = "0.10.8"