[package]
name = "RSA-Implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.2"
rand = "0.8"
num = "0.4.1"

actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0.192", features = ["derive"] }

atomic-counter = "1.0.1"
log = "0.4.20"
simple_logger = "4.2.0"
rayon = "1.8.0"
sha2 = "0.10.8"