[package]
name = "encryption_tool"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.2"
rand = "0.8.5"
num = "0.4.1"

actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1.0.196", features = ["derive"] }

atomic-counter = "1.0.1"
log = "0.4.20"
simple_logger = "4.3.3"
rayon = "1.8.1"
anyhow = "1.0.82"
thiserror = "1.0.58"

sha2 = "0.10.8"